# lili

./: .formatter.exs  .gitignore  Cargo.toml  README.md  config.yaml  mix.exs  shell.nix
.github/workflows/: static.yml
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
doc/: .build  404.html  Lili.Account.User.html  Lili.Account.UserToken.html  Lili.Account.html  Lili.Mailer.html  Lili.Repo.html  Lili.epub  Lili.html  LiliWeb.Endpoint.html  LiliWeb.ErrorHelpers.html  LiliWeb.ErrorView.html  LiliWeb.Gettext.html  LiliWeb.Router.Helpers.html  LiliWeb.Router.html  LiliWeb.Telemetry.html  LiliWeb.UserAuth.html  LiliWeb.UserController.html  LiliWeb.UserSessionController.html  LiliWeb.UserSessionView.html  LiliWeb.UserView.html  LiliWeb.html  api-reference.html  index.html  lili.epub  search.html
lib/: lili.ex  lili_web.ex
lib/lili/: account.ex  application.ex  mailer.ex  repo.ex
lib/lili/account/: user.ex  user_token.ex
lib/lili_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_view.ex
lib/lili_web/controllers/: user_auth.ex  user_controller.ex  user_session_controller.ex
lib/lili_web/views/: error_helpers.ex  error_view.ex  user_session_view.ex  user_view.ex
migrations/: 20230702223324_create_users_table.sql
priv/repo/: seeds.exs
priv/repo/migrations/: .formatter.exs  20221110073510_create_users.exs  20221114072726_create_user_tokens.exs
src/: authentication.rs  configuration.rs  lib.rs  main.rs
test/: test_helper.exs
test/lili_web/views/: error_view_test.exs
test/support/: conn_case.ex  data_case.ex
tests/: test.rs
