[package]
name = "lili"
authors = ["Emmy Emmycelium <emm218@proton.me>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/emm218/lili"
publish = false

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="lili"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["http2"] }
clap = { version = "4.3.9", features = ["derive"] }
config = "0.13.3"
hyper = { version = "0.14.27", features = ["http1", "http2", "tcp", "server"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "macros", "any"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["cors"] }
uuid = { version = "1.4.0", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.11.18", features = ["tokio-rustls", "json", "serde_json"] }

